# omniai

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  MILESTONES.md  Makefile  README.md  SPEC.md  SPEC_SUMMARY.md  generate_full_guide_pdf.py  generate_guide_pdf.py  generate_report.py  start-demo.bat
backend/: .dockerignore  .omniai-index.pkl  Dockerfile  README.md  alembic.ini  demo_seed.py  dev_repair_sqlite.py  main.py  omniai-dev.db.bak-20260504-100719  omniai-dev.db.bak-20260504-103242  omniai-dev.db.bak-20260504-103920  omniai-dev.db.bak-20260504-103926  pyproject.toml
backend/docker/: entrypoint.sh
backend/omniai/: __init__.py
backend/omniai/adapters/object_store/: __init__.py  factory.py  local_fs.py  s3_compatible.py
backend/omniai/adapters/queue/: __init__.py  arq_queue.py  (+2 more)
backend/omniai/application/: agent_service.py  auth_service.py  chat_service.py  connector_service.py  deployment_service.py  identity_service.py  ingestion_service.py  marketplace_service.py  observability_service.py  provider_service.py  retrieval_service.py  services.py  store.py
backend/omniai/bootstrap/: __init__.py  container.py
backend/omniai/config/: settings.py
backend/omniai/connectors/: base.py  confluence.py  database.py  google_drive.py  local_folder.py  notion.py  s3.py  sharepoint.py  slack.py  webcrawler.py
backend/omniai/interfaces/: __init__.py
backend/omniai/observability/: audit.py  logging_config.py  metrics.py  rate_limit.py  sentry_setup.py  tracing.py
backend/omniai/ports/: __init__.py  agents.py  cache.py  chunk_template.py  connectors.py  deployments.py  embedding_provider.py  llm_provider.py  object_store.py  parser.py  queue.py  relational.py  reranker.py  sandbox.py  search_engine.py
backend/omniai/security/: hashing.py  permissions.py  secrets.py  tokens.py
backend/omniai/utils/: cache.py  token_counter.py
backend/omniai/workers/: graph_extraction.py  indexing.py  parsing.py  worker.py
backend/tests/: conftest.py  test_agent_code_node.py  test_bm25_search.py  test_chunking.py  test_connectors.py  test_deployments.py  test_document_versioning.py  test_http_integration.py  test_m14_production_hardening.py  test_m15_identity.py  test_m16_observability.py  test_m17_connectors.py  test_m18_ux.py  test_m19_retrieval.py  test_m20_agent_platform.py  test_ocr.py  test_page_tagging.py  test_pdf_table_rendering.py  test_rate_limit.py  test_rbac.py  test_repositories.py  test_retrieval_cache.py  test_sandbox.py  test_secrets.py  test_webcrawler.py
(+150 files in other folders)
