[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniai"
version = "0.1.0"
description = "Omni-AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "cryptography>=43.0.0,<46.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "boto3>=1.35.0,<2.0.0",
  "redis>=5.0.0,<6.0.0",
  "arq>=0.26.0,<1.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "python-docx>=1.1.0,<2.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=5.3.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["omniai*"]

[tool.ruff]
line-length = 110
target-version = "py311"
